--- a/demo/package.json
+++ b/demo/package.json
@@ -1,6 +1,12 @@
 {
   "nativescript": {
-    "id": "org.nativescript.demo"
+    "id": "org.nativescript.demo",
+    "tns-ios": {
+      "version": "5.3.1"
+    },
+    "tns-android": {
+      "version": "5.3.1"
+    }
   },
   "dependencies": {
     "nativescript-theme-core": "^1.0.4",
