--- a/demo/package.json
+++ b/demo/package.json
@@ -26,7 +26,7 @@
     "tslint": "~5.12.1"
   },
   "scripts": {
-    "build.plugin": "cd ../src && npm run build",
+    "build.plugin": "cd ../src && npm i && npm run build",
     "ci.tslint": "npm i && tslint --config '../tslint.json' 'app/**/*.ts' --exclude '**/node_modules/**' --exclude '**/platforms/**'"
   }
 }
